--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.10",
+    "@expo/webpack-config": "^19.0.0",
+    "@types/react": "~18.2.14",
+    "expo": "^49.0.11",
     "expo-status-bar": "~1.6.0",
+    "luxon": "^3.4.2",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.4",
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "volta": {
+    "node": "18.17.1",
+    "npm": "9.6.7"
+  }
 }
